ingress/hp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    haproxy.org/path-rewrite: "/"
spec:
  rules:
  - http:
      paths:
      - path: /web1
        pathType: Prefix
        backend:
          service:
            name: web-svc1
            port:
              number: 80
      - path: /web2
        pathType: Prefix
        backend:
          service:
            name: web-svc2
            port:
              number: 80
